# AzureMetricsResourceModule

./: .gitignore  README.md  pyproject.toml
module_metrics/entities/: metrics.py  time_series.py
module_metrics/infra/: azure_authenticate.py  azure_metrics.py  config.py
module_metrics/services/: metrics_services.py
module_metrics/utils/: aggregation_validator.py  date_validator.py  exception.py  interval_validator.py
tests/: conftest.py  test_aggregation_validator.py  test_azure_authenticate.py  test_date_validator.py  test_exception.py  test_get_metrics.py  test_interval_validator.py  test_metrics_services.py
